--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header form{
 }
 
 header form input{
-    width: 35%;
+    width: 45%;
 }
 
 header form input{
@@ -44,9 +44,11 @@ header form input{
     border: none;
     border: 1px solid rgba(0, 0, 0, 0.458);
     border-radius: 100vw 0 0 100vw;
+    font-style: italic;
 
 }
 
+/*cuando se pone el cursor arriba del form*/
 header form input:focus{
     border: 1px solid rgba(220, 20, 60, 0.466);
     outline: none;
@@ -62,17 +64,16 @@ header form button{
     transition: 200ms;
     font-style: italic;
     font-weight: 500;
-    align-self: flex-end;
 }
 
 header form button:hover{
     border: 1px solid rgba(255, 255, 255, 0);
     background-color: black;
 }
-
+/*lista que esta en el header */
 header ul{
     display: flex;
-    gap: 2rem;
+    gap: 2rem; /*espaciado entre los elementos*/
 }
 
 header ul li{
@@ -84,19 +85,74 @@ header ul li:hover{
     transform: scale(1.2);
 }
 
-.cards-container{
-    padding: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-}
-
-.card{
+/*estilos targetas generos*/
+.genders-container{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 4rem;
+    gap: 2rem;
+}
+
+.gender-card{
+    display: flex;
+    background-color: black;
+    color: white;
+    justify-content: space-between;
+    border-radius: 10px;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    transition: 2ms;
+    gap: 3rem;
+}
+
+.gender-card:hover{
+    background-color: rgba(0, 0, 0, 0.412);
+    transform: translateY(-5px);
+}
+
+.info-gender-card{
+    display: flex;
+    gap: 2rem;
+    padding:2rem;
+    align-items: center;
+}
+
+.icon-gender-container{
+    width: 35%;
+}
+
+.icon-gender-container img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.icon-gender-container{
+    width: 4.5rem;
+    align-self: flex-end;
+}
+
+.icon-gender-container img{
+    width: 100%;
+    filter: invert(100);
+}
+
+
+/*estilos tarjetas*/
+.cards-container{
+    padding: 2rem;/*separador qe tiene en cada tarjeta*/
+    display: flex;/*hace que las etiquetas se acomoden de acuero al tamaño del navegador*/
+    flex-wrap: wrap;/**/
+    align-items: center;/**/
+    justify-content: center;/**/
+    gap: 2rem;/**/
+}
+
+.card{
+    display: flex;/*a cad auna de la starjetas*/
+    flex-direction: column;/*se comodan de forma vertical*/
+    align-items: center;/*para que todo la info. esté centrado*/
 
     background-color: black; /*da el color de las tarjetas*/
     color: white; /*color de las letras que estan en las tarjetas*/
@@ -129,7 +185,7 @@ header ul li:hover{
     transition: 200ms;
     font-style: italic;
     font-weight: 500;
-    align-self: flex-end;
+    align-self: flex-end;/*queremos que se acomode el botón del lado derecho*/
 }
 
 
@@ -149,3 +205,55 @@ header ul li:hover{
     border: 1px solid rgba(255, 255, 255, 0);
     background-color: crimson;
 }
+
+/* Estilos del footer */
+
+footer{
+    background-color: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 4rem;
+}
+
+.footer-logo-container{
+    width: 5rem;
+    background-color: white;
+}
+
+.footer-logo-container img{
+    width: 100%;
+}
+
+.links-containers{
+    display: flex;
+    font-weight: bold;
+    gap: 3.5rem;
+}
+
+.links-containers li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.logos-container{
+    display: flex;
+    gap: 3.5rem;
+}
+
+.logos-container li{
+    width: 4rem;
+    padding: 2rem;
+}
+
+.logos-container img{
+    filter: invert(100);
+    width: 100%;
+    transition: 200ms;
+}
+
+.logos-container img:hover{
+    transform: scale(1.3);
+}
+
