--- a/style.css
+++ b/style.css
@@ -257,3 +257,41 @@ footer{
     transform: scale(1.3);
 }
 
+/*para la imagen que se encuentra con un grid*/
+.box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.2rem;
+}
+
+.box{
+    background-color: cornflowerblue;
+    width: 5rem;
+    height: 5rem;
+}
+
+.box{
+    background-color: crimson;
+    /*mueve los elementosposition: relative;*/
+    /*position: absolute; saca del flujo orginial de como estaban acomodados los elementos*/
+    /*position: sticky; se pega hasta que llega al final del contenedor*/
+    /*position: fixed; combinación entre el sticky y el absolute, ya que saca el elemento pero lo mantiene pegado*/
+    position: fixed;
+    color: white;
+    bottom: 5rem;
+    right: 2rem;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box:hover{
+    transition: 200ms;
+    transform: translateY(-10px);
+    transform: scale(1.3);
+}
+
+.box img{
+    width: 85%;
+}
