--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 
-ul{
+ul, ol{
     list-style: none;
 }
 
@@ -35,13 +35,10 @@ header form{
 }
 
 header form input{
-    width: 45%;
-}
-
-header form input{
-    width: 70%;
+    width: 80%;
     padding: 1rem 2rem;
     border: none;
+    transition: 200ms;
     border: 1px solid rgba(0, 0, 0, 0.458);
     border-radius: 100vw 0 0 100vw;
     font-style: italic;
@@ -52,6 +49,7 @@ header form input{
 header form input:focus{
     border: 1px solid rgba(220, 20, 60, 0.466);
     outline: none;
+    font-weight: bold;
     transition: 200ms;
 }
 
@@ -68,7 +66,8 @@ header form button{
 
 header form button:hover{
     border: 1px solid rgba(255, 255, 255, 0);
-    background-color: black;
+    background-color: white;
+    color: black;
 }
 /*lista que esta en el header */
 header ul{
@@ -83,6 +82,57 @@ header ul li{
 
 header ul li:hover{
     transform: scale(1.2);
+}
+
+/* Estilos tarjetas instrumentos */
+
+.intrument-container{
+    display: grid;
+    color: white;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 0.75rem;
+    padding: 2rem 4rem;
+}
+
+.big-card{
+    grid-column: 1/3;
+    grid-row: 1/3;
+    background-color: black;
+    padding: 3rem;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+}
+
+.small-card{
+    background-color: black;
+    padding: 1.5rem;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.big-card-image-container{
+    width: 70%;
+    align-self: center;
+}
+
+.big-card-image-container img{
+    width: 100%;
+    border-radius: 5px;
+}
+
+.small-card-icon-container{
+    width: 35%;
+    align-self: flex-end;
+}
+
+.small-card-icon-container img{
+    width: 100%;
+    filter: invert(1);
 }
 
 /*estilos targetas generos*/
