--- a/style.css
+++ b/style.css
@@ -347,3 +347,221 @@ h1{
     align-items: center;
     
 }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+    header{
+        padding: 1rem;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .header-image-container{
+        width: 15%;
+    }
+
+    header form{
+        width: 60%;
+    }
+    
+    header form input{
+        width: 35%;
+        padding: 0.25rem 0.5rem;
+    }
+
+    header form button{
+        padding: 0.25rem 0.5rem;
+    }
+
+    header ul{
+        display: none;
+    }
+
+    .nav-icon{
+        display: block;
+    }
+
+    .intrument-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        padding: 2rem 2rem;
+    }
+
+    .big-card{
+        font-size: 10px;
+    }
+    
+    .small-card{
+        font-size: 8px;
+    }
+
+    .genders-container{
+        padding: 1.5rem;
+        gap: 2rem;
+    }
+
+    .image-gender-container{
+        display: none;
+    }
+
+    .cards-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cards-container h1{
+        font-size: 12px;
+    }
+
+    .cards-container p{
+        font-size: 10px;
+    }
+
+    .cards-container button{
+        font-size: 10px;
+    }
+
+    footer{
+        font-size: 8px;
+        padding: 1rem;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    .footer-logo-container{
+        display: none;
+    }
+
+    .links-containers{
+        gap: 1rem;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 800px) {
+    header{
+        padding: 1rem;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .header-image-container{
+        width: 0.5rem;
+    }
+
+    header form{
+        width: 60%;
+    }
+    
+    header form input{
+        width: 35%;
+        padding: 0.25rem 0.5rem;
+    }
+
+    header form button{
+        padding: 0.25rem 0.5rem;
+    }
+
+    header ul{
+        font-size: 10px;
+        gap: 1rem;
+    }
+
+    .intrument-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        padding: 1.5rem;
+    }
+
+    .big-card{
+        font-size: 10px;
+    }
+    
+    .small-card{
+        font-size: 8px;
+    }
+
+    .cards-container{
+        display: flex;
+        flex-direction: column;
+        padding: 1.5rem;
+    }
+
+    .cards-container h1{
+        font-size: 12px;
+    }
+
+    .cards-container p{
+        font-size: 10px;
+    }
+
+    .cards-container button{
+        font-size: 10px;
+    }
+
+    footer{
+        font-size: 8px;
+        padding: 1rem;
+        gap: 0.5rem;
+    }
+
+    .footer-logo-container{
+        width: 2rem;
+    }
+
+    .links-containers{
+        gap: 1rem;
+        justify-content: center;
+    }
+
+    .logos-container{
+        gap: 1rem;
+    }
+
+    .logos-container li{
+        width: 2rem;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 1100px) {
+    .header-image-container{
+        width: 5.5rem;
+    }
+    
+    header form input{
+        width: 60%;
+    }
+
+    .big-card{
+        font-size: 14px;
+    }
+    
+    .small-card{
+        font-size: 10px;
+    }
+
+    .cards-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .cards-container h1{
+        font-size: 14px;
+    }
+
+    .cards-container p{
+        font-size: 12px;
+    }
+
+    .cards-container button{
+        font-size: 12px;
+    }
+
+    footer{
+        font-size: 10px;
+        padding: 2rem;
+    }
+
+    .links-containers{
+        gap: 1.5rem;
+    }
+}
